@@ -54,15 +54,22 @@ public class UIManager implements Serializable
   {
     String name, clazz;
 	
-    LookAndFeelInfo(String name, 
-                    String clazz)
+    public LookAndFeelInfo(String name, 
+			   String clazz)
     {
       this.name  = name;
       this.clazz = clazz;
     }
 
-    String getName()      { return name;  }
-    String getClassName() { return clazz; }
+    public String getName()
+    {
+      return name;
+    }
+    
+    public String getClassName()
+    {
+      return clazz;
+    }
   }
 
   private static final long serialVersionUID = -5547433830339189365L;
