@@ -1,3 +1,13 @@
+2004-06-06  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/SwingConstants.java
+	(NEXT): New constant.
+	(PREVIOUS): Likewise.
+	* javax/swing/UIManager.java
+	(LookAndFeel): Made public.
+	(LookAndFeel.getClassName): Likewise.
+	(LookAndFeel.getName): Likewise.
+
 2004-06-02  Olga Rodimina  <rodimina@redhat.com>
 
 	* javax/swing/JCheckBoxMenuItem.java:
